modified:   html/index.html new file:   html/static/favicon.ico new file:   html/static/favicon.png new file:   html/static/icon.ico new file:   html/static/icon.psd

--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,17 @@
   <!-- 新的UI框架 -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/picnic">
 
+  <!-- ICON start -->
+  <!-- <link rel="apple-touch-icon" sizes="76x76" href="/static/icon/apple-touch-icon.png"> -->
+  <!-- <link rel="icon" type="image/png" sizes="32x32" href="/static/icon/favicon-32x32.png"> -->
+  <!-- <link rel="icon" type="image/png" sizes="16x16" href="/static/icon/favicon-16x16.png"> -->
+  <link rel="icon" href="/static/favicon.ico">
+  <!-- <link rel="manifest" href="/static/icon/site.webmanifest"> -->
+  <!-- <link rel="mask-icon" href="/static/icon/safari-pinned-tab.svg" color="#5bbad5"> -->
+  <!-- <meta name="msapplication-TileColor" content="#da532c"> -->
+  <!-- <meta name="theme-color" content="#ffffff"> -->
+  <!-- ICON end -->
+
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/purecss@3.0.0/build/pure-min.css" integrity="sha384-X38yfunGUhNzHpBaEBsWLO+A0HDYOQi8ufWDkZ0k9e0eXz/tH3II7uKZ9msv++Ls" crossorigin="anonymous"> -->
 </head>
 
