modified:   html/index.html 	modified:   install_doc.md

--- a/html/index.html
+++ b/html/index.html
@@ -10,11 +10,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>兔子云印</title>
 
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/mdui@1.0.1/dist/css/mdui.min.css"
+  <link rel="stylesheet" href="https://js-457d9eeb-fcfe-4d6e.dayi.cool/npm/mdui@1.0.1/dist/css/mdui.min.css"
     integrity="sha384-cLRrMq39HOZdvE0j6yBojO4+1PrHfB7a9l5qLcmRm/fiWXYY+CndJPmyu5FV/9Tw" crossorigin="anonymous" />
 
   <!-- 新的UI框架 -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/picnic">
+  <link rel="stylesheet" href="https://js-457d9eeb-fcfe-4d6e.dayi.cool/npm/picnic">
 
   <!-- ICON start -->
   <!-- <link rel="apple-touch-icon" sizes="76x76" href="/static/icon/apple-touch-icon.png"> -->
