modified:   html/index.html modified:   index.js modified:   server/print_really/hi.py

--- a/html/index.html
+++ b/html/index.html
@@ -579,7 +579,7 @@ function log(message) {
       </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/mdui@1.0.1/dist/js/mdui.min.js"
+    <script src="https://js-457d9eeb-fcfe-4d6e.dayi.cool/npm/mdui@1.0.1/dist/js/mdui.min.js"
       integrity="sha384-gCMZcshYKOGRX9r6wbDrvF+TcCCswSHFucUzUPwka+Gr+uHgjlYvkABr95TCOz3A" crossorigin="anonymous">
       </script>
 
