--- a/html/index.html
+++ b/html/index.html
@@ -33,6 +33,7 @@
 <body class="mdui-theme-primary-pink mdui-theme-accent-pink mdui-bottom-nav-fixed">
   <!-- 引用JS -->
   <script src="static/js/functions.js" type="text/javascript"></script>
+  <!-- 引用JS -->
 
   <div class="mdui-toolbar mdui-color-green-600">
     <a class="mdui-typo-title" style="font-family: Zpix,serif" href="/">兔子云印！-RCP！</a>
@@ -449,7 +450,7 @@
 
 
       <!-- 获得打印机列表 -->
-      <button onclick="displayPrinterList()">获取打印机列表</button>
+      <!-- <button onclick="displayPrinterList()">获取打印机列表</button> -->
       <div>
         <label for="printer-list" >打印机：</label>
         <select id="printer-list" onchange="changePrinter()"></select>
