modified:   README.md modified:   html/index.html

--- a/html/index.html
+++ b/html/index.html
@@ -469,11 +469,11 @@
           </div>
 
           <!-- 黑白打印选项 -->
-          <label>
+          <!-- <label>
             <input type="checkbox" name="blackAndWhitePrinting">
             <span class="checkable">黑白打印</span>
 
-          </label>
+          </label> -->
 
           <!-- 删除文件选项 -->
           <div>
