--- a/html/index.html
+++ b/html/index.html
@@ -55,6 +55,7 @@
         <font color="green">登录信息存储在:<b>浏览器</b>中,并与域名绑定,也就是cookie</font><br>
       </div>
     </li>
+    <a href="./template.html">模板打印</a>
   </div>
 
   <!-- 管理菜单 -->
@@ -92,8 +93,6 @@
     </ul>
   </div>
   <!-- 管理菜单 -->
-
-
 
 
 
