modified:   "docs/\346\274\224\347\244\272.md" modified:   html/index.html modified:   index.js modified:   server/file_manager/collect_node.db

--- a/html/index.html
+++ b/html/index.html
@@ -55,7 +55,7 @@
         <font color="green">登录信息存储在:<b>浏览器</b>中,并与域名绑定,也就是cookie</font><br>
       </div>
     </li>
-    <a href="./template.html">模板打印</a>
+    <!-- <a href="./template.html">模板打印</a> -->
   </div>
 
   <!-- 管理菜单 -->
